<resources>
    <string name="app_name">SignsUp</string>

    // Login
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="forget_password">¿Olvido la contraseña?</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>

    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <!-- Tracking -->
    <string name="notification_text">Tracking, tap to cancel</string>
    <string name="title_activity_display">Transport Display</string>

    <!-- Init Activity -->
    <string name="lbl_isv">Inventario de Señales Viales</string>
    <string name="txt_departamento">Digite el Departamento</string>
    <string name="txt_municipio">Digite el Municipio</string>
    <string name="init_process">Comenzar</string>

    <!-- Geolocation -->
    <string name="geolocalization_photo">Fotos Geolocalizables</string>
    <string name="north">Norte</string>
    <string name="south">Sur</string>
    <string name="west">Oeste</string>
    <string name="east">Este</string>

    <!-- Type Route -->
    <string name="lbl_title_type_route">Tipo de Ruta</string>
    <string name="btn_urban">Urbano</string>
    <string name="btn_rural">Rural</string>

    <!-- Type Signal -->
    <string name="lbl_clasification_signal">Clasificación de la Señal</string>
    <string name="btn_horizontal">Horizontal</string>
    <string name="btn_vertical">Vertical</string>
    <string name="btn_others">Otras</string>


    <!-- Horizontal - Tipo de Señal Horizontal -->
    <string name="lbl_type_horizontal_signal">Tipo de Señal Horizontal</string>
    <string name="lbl_sense_traffic">Sentido del Trafico</string>
    <string name="rbtn_unidirectional">Unidireccional</string>
    <string name="rbtn_bidirectional">Bidireccional</string>

    <string name="lbl_location_way">Ubicación en el Trayecto</string>
    <string name="btn_stretch">Tramo</string>
    <string name="btn_intersection">Intersección</string>

    <string name="lbl_location_lane">Ubicación en Carril</string>
    <string name="txt_location_signal">Carril de la señal</string>
    <string name="txt_percentage_coverage">Porcentaje de Cobertura</string>

    <!-- Vertical - Tipo de Señal Vertical -->
    <string name="lbl_vertical_type_signal">Tipo de Señal Vertical</string>
    <string name="btn_vertical_informative">Informativa</string>
    <string name="btn_vertical_regulatory">Reglamentaria</string>
    <string name="btn_vertical_preventive">Preventiva</string>
    <string name="btn_vertical_work">Obra</string>
    <string name="btn_vertical_cycle_route">Ciclo Ruta</string>

    <!--// Vertical - Tipo Señal Vertical - Señal Informativa -->
    <string name="lbl_vts_informative">Señal Informativa</string>
    <string name="btn_vts_informative_location">Inf. de Localización</string>
    <string name="btn_vts_informative_services">Inf. de Servicios</string>
    <string name="btn_vts_informative_turist">Inf. de Turismo</string>

    <!-- Sección 3: Datos Generales -->
    <string name="tab_text_3">Datos Generales</string>

    <string name="lbl_location_between_signal">La señal esta entre la:</string>
    <string name="lbl_location_and_signal">Y la:</string>
    <string name="lbl_location_with_signal">Con:</string>
    <string name="lbl_number">#</string>
    <string name="lbl_score">-</string>
    <string name="lbl_state_signal">Estado de la Señal:</string>
    // Spinners
    <string-array name="spinner_zip">
        <item name="select">Seleccione</item>
        <item name="spinner_zip_1">Calle</item>
        <item name="spinner_zip_2">Carrera</item>
        <item name="spinner_zip_3">Avenida</item>
        <item name="spinner_zip_4">Avenida Carrera</item>
        <item name="spinner_zip_5">Avenida Calle</item>
        <item name="spinner_zip_6">Circular</item>
        <item name="spinner_zip_7">Circunvalar</item>
        <item name="spinner_zip_8">Diagonal</item>
        <item name="spinner_zip_9">Manzana</item>
        <item name="spinner_zip_10">Transversal</item>
        <item name="spinner_zip_11">Vía</item>
    </string-array>

    <!-- State Signal -->
    <string name="lbl_size_signal">Tamaño de la Señal</string>
    <string name="btn_60">60 x 60</string>
    <string name="btn_75">75 x 75</string>
    <string name="btn_90">90 x 90</string>
    <string name="btn_120">120 x 120</string>

    <string name="lbl_stay_signal">Fijación de la Señal</string>
    <string name="btn_self_signal">Banderilla</string>
    <string name="btn_light_signal">Poste de Luz</string>
    <string name="btn_wall_signal">Pared</string>

    <string name="lbl_state_stay_signal">Estado de la Fijación de la Señal</string>

    <!-- GPS Signal -->
    <string name="lbl_lat_lon">Captura de Latitud Y Longitud</string>
    <string name="txt_latitude">Latitud</string>
    <string name="txt_altitude">Altitud</string>
    <string name="txt_longitude">Longitud</string>
    <string name="btn_gps">Set GPS (Lat, Lon)</string>

    <string name="lbl_photos_signal">Fotos de la señal</string>
    <string name="photo_only">Foto</string>
    <string name="photo_front">Frontal</string>
    <string name="photo_back">Dorsal</string>
    <string name="photo_plaque">Placa</string>

    <!-- Extra LBLS -->
    <string name="select">Seleccione</string>
    <string name="information">Información</string>
    <string name="next">Siguiente</string>
    <string name="new_signal">Nueva Señal</string>
    <string name="save">Guardar</string>
    <string name="exit">Salir</string>
    <string name="todo">TODO</string>
    <string name="pause">pause</string>
    <string name="resume">resume</string>
    <string name="count">Cantidad de Señales Registradas</string>

    <!-- Information Labels -->
    // Labels Activities Images
    <string name="title_horizontal_stretch">Horizontal Tramo</string>
    <string name="title_horizontal_intersection">Horizontal Intersección</string>

    <string name="title_vertical_info_localization">Información de Localización</string>
    <string name="title_vertical_info_services">Información de Servicios</string>
    <string name="title_vertical_info_turistic">Información de Turismo</string>

    <string name="title_vertical_regulatory">Señales Reglamentarias</string>
    <string name="title_vertical_preventives">Señales Preventivas</string>
    <string name="title_vertical_work">Señales de Obra</string>
    <string name="title_vertical_cycle_route">Señales de Cicloruta</string>
    <string name="title_another">Otras Señales</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
