<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.signal.TypeSignal"
        android:background="@drawable/background"
>

    <Button
            android:text="@string/btn_horizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/btn_horizontal"
            style="@style/CittisButton"
            app:layout_constraintTop_toBottomOf="@+id/lbl_clasification_signal"
            android:layout_marginBottom="43dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_vertical" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="67dp" android:layout_marginEnd="67dp"
            android:textSize="24sp"/>
    <Button
            android:text="@string/btn_vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/btn_vertical"
            android:background="@drawable/button" android:textSize="24sp" style="@style/CittisButton"
            app:layout_constraintTop_toBottomOf="@+id/btn_horizontal"
            android:layout_marginBottom="46dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_others" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="67dp" android:layout_marginEnd="67dp"
    />
    <Button
            android:text="@string/btn_others"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/btn_others"
            android:background="@drawable/button" android:textSize="24sp" style="@style/CittisButton"
            app:layout_constraintTop_toBottomOf="@+id/btn_vertical"
            android:layout_marginBottom="105dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="67dp"
            android:layout_marginEnd="67dp"/>
    <TextView
            android:text="@string/lbl_clasification_signal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_clasification_signal"
            android:textAlignment="center" style="@style/CittisText"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="68dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_horizontal" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
</android.support.constraint.ConstraintLayout>