<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.Login">

    <ImageView
            android:layout_width="261dp"
            android:layout_height="157dp" app:srcCompat="@drawable/logo"
            android:id="@+id/imageView" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:contentDescription="@string/user"/>
    <Button
            android:text="@string/login"
            android:layout_width="191dp"
            android:layout_height="55dp"
            android:id="@+id/btn_login" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txt_password"
            android:background="@drawable/border"/>
    <TextView
            android:text="@string/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:id="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.64"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txt_password"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/txt_user"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:hint="@string/user" android:contentDescription="@string/user" android:autofillHints=""/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/txt_password"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_user" android:hint="@string/password"
            android:inputType="textPassword" android:contentDescription="@string/user" android:autofillHints=""/>
</android.support.constraint.ConstraintLayout>