<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_vertical"
        tools:context=".view.signal.vertical.VerticalSignal">


    <ImageButton
            android:src="@drawable/btn_vertical_informative"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/ibtn_vertical_informative"
            android:contentDescription="@string/btn_vertical_informative"
            android:scaleType="centerInside"
            android:background="@android:color/transparent"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.39" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.011"/>
    <ImageButton
            android:src="@drawable/btn_vertical_preventive"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/ibtn_vertical_preventive"
            android:contentDescription="@string/btn_vertical_preventive"
            android:scaleType="centerInside"
            android:background="@android:color/transparent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.39" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <ImageButton
            android:src="@drawable/btn_vertical_regulatory"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/ibtn_vertical_regulatory"
            android:contentDescription="@string/btn_vertical_regulatory"
            android:scaleType="centerInside"
            android:background="@android:color/transparent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.39"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.911"/>
    <ImageButton
            android:src="@drawable/btn_vertical_work"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/ibtn_vertical_work"
            android:contentDescription="@string/btn_vertical_work"
            android:scaleType="centerInside"
            android:background="@android:color/transparent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.728"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.284"/>
    <ImageButton
            android:src="@drawable/btn_vertical_ciclo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/ibtn_vertical_cycle_route"
            android:contentDescription="@string/btn_vertical_cycle_route"
            android:scaleType="centerInside"
            android:background="@android:color/transparent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.728"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.688"/>
    <TextView
            android:text="@string/lbl_vertical_type_signal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_vertical_type_signal"
            android:textAlignment="center"
            style="@style/CittisText"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintVertical_bias="0.011"/>
</android.support.constraint.ConstraintLayout>