<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".Geolocalization">
    <TextView
            android:text="@string/geolocalization_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_geolocalization_photo"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textAlignment="center" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" style="@style/CittisText"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="123dp"
            android:layout_height="wrap_content" android:layout_weight="1"
            android:id="@+id/lv_north"
            android:gravity="center|center_horizontal|center_vertical" android:layout_margin="5dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/lbl_geolocalization_photo"
            app:layout_constraintVertical_bias="0.0">
        <CheckBox
                android:text="@string/north"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/cb_north"
                android:textAlignment="center" android:enabled="false"
                android:layout_weight="1" android:textColor="@color/color_text"/>
        <ImageButton
                android:layout_width="125dp"
                android:layout_height="125dp" app:srcCompat="@android:drawable/ic_menu_camera"
                android:id="@+id/ibtn_north" android:layout_weight="1"
                android:contentDescription="@string/photo_back" android:scaleType="fitXY"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="123dp"
            android:layout_height="wrap_content" android:layout_weight="1"
            android:id="@+id/lv_south"
            android:gravity="center|center_horizontal|center_vertical" android:layout_margin="5dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_save_geolocalization"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/lv_north"
            app:layout_constraintVertical_bias="0.71000004">
        <CheckBox
                android:text="@string/south"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/cb_south"
                android:textAlignment="center" android:enabled="false"
                android:layout_weight="1" android:textColor="@color/color_text"/>
        <ImageButton
                android:layout_width="125dp"
                android:layout_height="125dp" app:srcCompat="@android:drawable/ic_menu_camera"
                android:id="@+id/ibtn_south" android:layout_weight="1"
                android:contentDescription="@string/photo_back" android:scaleType="fitXY"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="123dp"
            android:layout_height="wrap_content" android:layout_weight="1"
            android:id="@+id/lv_east"
            android:gravity="center|center_horizontal|center_vertical" android:layout_margin="5dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.42000002">
        <CheckBox
                android:text="@string/east"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/cb_east"
                android:textAlignment="center" android:enabled="false"
                android:layout_weight="1" android:textColor="@color/color_text"/>
        <ImageButton
                android:layout_width="125dp"
                android:layout_height="125dp" app:srcCompat="@android:drawable/ic_menu_camera"
                android:id="@+id/ibtn_east" android:layout_weight="1"
                android:contentDescription="@string/photo_back" android:scaleType="fitXY"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="123dp"
            android:layout_height="wrap_content" android:layout_weight="1"
            android:id="@+id/lv_west"
            android:gravity="center|center_horizontal|center_vertical" android:layout_margin="5dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.42000002">
        <CheckBox
                android:text="@string/west"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/cb_west"
                android:textAlignment="center" android:enabled="false"
                android:layout_weight="1" android:textColor="@color/color_text"/>
        <ImageButton
                android:layout_width="125dp"
                android:layout_height="125dp" app:srcCompat="@android:drawable/ic_menu_camera"
                android:id="@+id/ibtn_west" android:layout_weight="1"
                android:contentDescription="@string/photo_back" android:scaleType="fitXY"/>
    </LinearLayout>
    <Button
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_save_geolocalization"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" style="@style/CittisButton"/>
</android.support.constraint.ConstraintLayout>
